# github-repo-stats

./: README.md  hist_clones.csv  hist_langs.csv  index.html  pyproject.toml
.github/workflows/: daily-stats.yaml
data/: hist_clones.csv  hist_commits.csv  hist_general.csv  hist_labels.csv  hist_langs.csv  hist_refs.csv  hist_views.csv
plots/: activity.json  clones.json  commit_distribution.json  engagement_scatter.json  issue_pr_distribution.json  labels_treemap.json  languages.json  pr_health.json  referrers.json  views.json
src/: repostats.py
src/repoconfig/: config.py
workflows/: daily-stats.yaml
